fixed layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family= ");
-#nav-icon, form, header .border-bottom, .about-main,
-.about-sof {
+#nav-icon, form, header .border-bottom, .about-sof {
   margin: 0 auto; }
 
 * {
@@ -503,27 +502,22 @@ header {
   text-align: center; }
 .home-main p,
 .about-main p {
-  text-indent: 25px;
   width: 60%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 5px; }
 
 .contact-main p, .contact-main h2 {
   text-align: center; }
 
-.about-main,
 .about-sof {
   width: 70%; }
-  .about-main h2,
   .about-sof h2 {
     text-align: center; }
-  .about-main h3,
   .about-sof h3 {
     text-align: center;
     text-decoration: underline; }
-  .about-main ol li,
   .about-sof ol li {
     margin: 10px; }
-  .about-main p,
   .about-sof p {
     text-indent: 0px;
     margin: 5px; }
