--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -37,9 +37,10 @@ header {
   }
   & p {
 
-    text-indent: 25px;
+    
     width: 60%;
     margin: 0 auto;
+    margin-top: 5px;
   }
 }
 
@@ -50,7 +51,7 @@ header {
   }
 }
 
-.about-main,
+
 .about-sof {
   & h2 {
     text-align: center;
